--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,7 +5,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t117%{?dist}
+Release:	0.t121%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -114,7 +114,7 @@ rm -rf $RPM_BUILD_ROOT
 %changelog
 * Fri Apr 11 2008 Jeff Fearn <jfearn@redhat.com> 0.34-0
 - Fix PO file name missing from translation status report
-- Modify xmlClean to output dummy content for empty files
+- Modify xmlClean to output dummy content for empty files (beta)
 - Default SHOW_UNKNOWN tags off
 - Make unset entity warnings more obvious
 - Make docs use DESKTOP styles
