fix BZ 436342, parentheses in file name crash
git-svn-id: file:///srv/svn/publican/trunk@270 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -77,7 +77,7 @@ dist: clean
 
 # This is required to avoid this package depending on itself to build it's docs
 MYPATH = $(shell echo $$PATH)
-docs: PATH=$(MYPATH):$(PWD)/bin
+docs: PATH=$(PWD)/bin:$(MYPATH)
 docs: Common_Content
 	@echo "Start $@"
 	@make -C content/docs STANDALONE=1 publish-dist
