--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -524,7 +524,7 @@ help::
 	@echo "	Run test-<LANG>-<LOC> for all languages."
 	@echo
 	@echo "update_includes: DANGER This updates your source XML"
-	@echo "	DANGER EXPERMINENTAL This could cause you a lot of heart ache and extra work."
+	@echo "	DANGER EXPERIMENTAL This could cause you a lot of heart ache and extra work."
 	@echo "	Modify all xi:include tags to exclude langauges that are not 100% translated."
 	@echo
 	@echo "update-po-<LANG>-<LOC>"
