add missing targets to help fix Java classpath for web rpms
git-svn-id: file:///srv/svn/publican/trunk@282 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/Makefile
+++ b/publican/Makefile
@@ -43,6 +43,12 @@ rpm: srpm
 	@rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" --rebuild $(RPMDIR)/SRPMS/$(TAR_NAME)-$(RELEASE).$(OS_VER).src.rpm
 	@echo "End $@"
 
+brew:: srpm
+	brew build docs-5E $(RPMDIR)/SRPMS/$(TAR_NAME)-$(RELEASE).el5.src.rpm
+
+brew-scratch:: srpm
+	brew build --scratch docs-5E $(RPMDIR)/SRPMS/$(TAR_NAME)-$(RELEASE).el5.src.rpm
+
 srpm: dist
 	@echo "Start $@"
 	@mkdir -p $(RPMDIR)
