--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,7 +5,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t134%{?dist}
+Release:	0.t142%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -22,7 +22,7 @@ Requires:	fonts-bengali fonts-chinese fonts-chinese-zysong fonts-gujarati
 Requires:	fonts-hindi fonts-japanese fonts-kannada fonts-korean
 Requires:	fonts-malayalam fonts-oriya fonts-punjabi fonts-sinhala
 Requires:	fonts-tamil fonts-telugu liberation-fonts
-Requires:	fop
+Requires:	fop batik
 
 BuildRequires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl
 BuildRequires:	%{_bindir}/xml2pot %{_bindir}/po2xml
