Fix loose directory name matching when exluding directories
git-svn-id: file:///srv/svn/publican/trunk@287 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -141,6 +141,7 @@ rm -rf $RPM_BUILD_ROOT
 - Force monospace on command
 - Switched to FOP 0.95Beta
 - Fixed crash bug on files names with parentheses BZ #447659
+- Fix loose directory name matching when exluding directiories.
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
