--- a/publican-jboss/make/Makefile.JBoss
+++ b/publican-jboss/make/Makefile.JBoss
@@ -3,6 +3,7 @@ CATALOGS	= XML_CATALOG_FILES="$(COMMON_CONFIG)/xsl/docbook/dtd-4.5/catalog.xml $
 #XML_DEBUG_CATALOG=1
 
 DOC_URL		= http://www.redhat.com/docs
+STRICT		= 1
 
 pre::
 	@if [[ "$(PRODUCT)" == "Documentation" ]]; then \
