Banned inlinegraphic. BZ #448331
git-svn-id: file:///srv/svn/publican/trunk@292 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -143,6 +143,7 @@ rm -rf $RPM_BUILD_ROOT
 - Fixed crash bug on files names with parentheses BZ #447659
 - Fix loose directory name matching when exluding directiories.
 - Added GENERATE_SECTION_TOC_LEVEL to allow section level TOC control. BZ #449720
+- Banned inlinegraphic. BZ #448331
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
