new Template fixes
git-svn-id: file:///srv/svn/publican/trunk@300 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/Makefile
+++ b/publican-fedora/Makefile
@@ -12,7 +12,7 @@ endif
 TAR_NAME = $(NAME)-$(VERSION)
 LANGS = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
-FILES	= pot README Makefile $(LANGS) en-US Book_Template COPYING make xsl
+FILES	= pot README Makefile $(LANGS) en-US Book_Template Article_Template Set_Template COPYING make xsl
 
 local: srpm
 	@echo "Start $@"
