--- a/publican/publican.spec.in
+++ b/publican/publican.spec.in
@@ -5,7 +5,7 @@
 Name:		publican	
 Summary:	Common files and scripts for publishing Documentation
 Version:	0.33
-Release:	0.t177%{?dist}
+Release:	0.t190%{?dist}
 License:	GPLv2+ and GFDL
 # The following directories are licensed under the GFDL:
 #	content
@@ -15,7 +15,7 @@ Buildroot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Buildarch:	noarch
 Source:		http://svn.fedorahosted.org/svn/publican/trunk/Files/%{name}-%{version}.tgz
 # need kdesdk for po2xml & xml2pot
-Requires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl elinks
+Requires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl elinks aspell
 Requires:	%{_bindir}/xml2pot %{_bindir}/po2xml
 Requires:	perl-ParseLex perl-HTML-Template
 Requires:	fonts-bengali fonts-chinese fonts-chinese-zysong fonts-gujarati
@@ -24,7 +24,7 @@ Requires:	fonts-malayalam fonts-oriya fonts-punjabi fonts-sinhala
 Requires:	fonts-tamil fonts-telugu liberation-fonts
 Requires:	fop batik
 
-BuildRequires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl
+BuildRequires:	gettext libxslt perl(XML::TreeBuilder) docbook-style-xsl aspell
 BuildRequires:	%{_bindir}/xml2pot %{_bindir}/po2xml
 BuildRequires:	desktop-file-utils
 # TODO: We will need these to get build time font-metric files
@@ -147,6 +147,7 @@ rm -rf $RPM_BUILD_ROOT
 - Added GENERATE_SECTION_TOC_LEVEL to allow section level TOC control. BZ #449720
 - Banned inlinegraphic. BZ #448331
 - Added Article and Set Templates
+- Banned xreflabel and endterm. BZ #452051
 
 * Mon Apr 7 2008 Jeff Fearn <jfearn@redhat.com> 0.33-0
 - Remove release from package name in html desktop spec file
