minor banned tweaks
git-svn-id: file:///srv/svn/publican/trunk@304 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -383,11 +383,11 @@ else
 endif
 ifeq "${1}" "$(XML_LANG)"
 	@echo
-	@echo "*Start list of Unknown words*";
+	@echo "*Start: Words Of Interest*";
 	@for file in `find $(XML_LANG) -name *.xml`; do \
 		aspell --list --mode=sgml --add-sgml-skip={$(ASPELL_EXCLUDES)} < $$$$file ; \
 	done | sort -u;
-	@echo "*End list of Unknown words*";
+	@echo "*End: Words Of Interest*";
 	@echo
 endif
 	@echo "END: test-${1} `date`"
